# AimXHack

./: INSTRUCOES_MT_MANAGER.md  app-debug.apk  settings.gradle.kts
.github/workflows/: build-injection-kit.yml  build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  game_detector.h  native_bridge.cpp  pattern_scanner.h
app/src/main/cpp/data/: GameConstants.h  Point2D.h  Vector3D.h
app/src/main/cpp/jni/: Android.mk  Application.mk
app/src/main/cpp/memory/: MemoryManager.cpp  MemoryManager.h  Offsets.h
app/src/main/cpp/predictor/: Prediction.cpp  Prediction.h
app/src/main/cpp/utils/: NumberUtils.h
app/src/main/java/com/aimx/hack/: FloatingMenu.kt  HackService.kt  LauncherActivity.kt  MainActivity.kt  NativeBridge.kt  OverlayUtils.kt  OverlayView.kt  PhysicsEngine.kt  PredictionView.kt  SimpleVisionEngine.kt  StopReceiver.kt
app/src/main/java/com/aimx/hack/service/: HackService.kt
app/src/main/java/com/aimx/hack/wrapper/: GameDownloadManager.kt  MemoryReader.kt  VirtualAppWrapper.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/smali/: AimXService.smali
builds/: app-debug.apk
mt_manager/smali/com/aimx/hack/: HackService$1.smali  HackService.smali  LauncherActivity.smali  StopReceiver.smali
pc/: aimx_adb.py  aimx_server.py  server_headless.py
scripts/: extract_apk.sh  inject.py  inject.sh  setup_termux.sh  termux_setup.sh
